[package]
name = "filter-city"
version = "0.1.1"
authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
keywords = ["city"]
# crates.io/category_slugs
categories = ["value-formatting"]
license = "GPL-3.0"
readme = "README.md"
description = "This program allows to search a city in ASCII all over the world in a json file."
documentation = "https://github.com/stephaneworkspace/filter-city"
homepage = "https://github.com/stephaneworkspace/filter-city"
repository = "https://github.com/stephaneworkspace/filter-city"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
unidecode = "0.3.0"
